fixes #15 - made it all red fixes #13 - changed graphics color fixes #11 - grey the table

--- a/public/assets/css/custom-styles.css
+++ b/public/assets/css/custom-styles.css
@@ -7,6 +7,15 @@ http://creativecommons.org/licenses/by/3.0/
   width:25%; /* you can use % */
   height: auto;
 }
+
+.redMe{
+    color: #e74c3c;
+}
+
+.greyME{
+    background-color: #f4f0ee;
+}
+
 /*.btn-danger {
     background: #9C2AA0;
     color: #ffffff;
