--- a/public/assets/css/custom-styles.css
+++ b/public/assets/css/custom-styles.css
@@ -16,10 +16,21 @@ http://creativecommons.org/licenses/by/3.0/
     background-color: #f4f0ee;
 }
 
-/*.btn-danger {
-    background: #9C2AA0;
-    color: #ffffff;
-}*/
+.Mybtn-danger {
+    background: rgb(226,9,25);
+    border: none;
+}
+
+.Mybtn-danger:hover{
+    background: rgb(140,18,19);
+    border: none;
+}
+
+.Mybtn-danger:focus{
+    background: rgb(184,14,24);
+    border: none;
+}
+
 /*----------------------------------------------
     COMMON  STYLES
 ------------------------------------------------*/
