--- a/public/assets/css/custom-styles.css
+++ b/public/assets/css/custom-styles.css
@@ -31,6 +31,28 @@ http://creativecommons.org/licenses/by/3.0/
     border: none;
 }
 
+.nav-pills > li.active > a{
+	background: rgb(56,4,64) !important;
+}
+
+.img-container{
+  width:150px;
+  height:225px;
+  position: relative;
+  display: inline-block;
+  margin: 10px 5px 5px;
+}
+
+.img-text{
+  top:50%;
+  width:150px;
+  height:50px;
+    margin-top: -25px;
+    position: absolute;
+    background-color: transparent;
+    display:block;
+}
+
 /*----------------------------------------------
     COMMON  STYLES
 ------------------------------------------------*/
